# QuantGPT

./: .gitignore  .gitmodules  API_DOC.md  README.md  pyproject.toml  restart.sh
docs/: API_DOC.md  FACTOR_MINING.md  QUICKSTART.md
docs/factor_research/: factor_deep_research_2026W12.md  factor_deep_research_2026W13.md
example_factor/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  AppRoutes.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  auth.ts  client.ts  cloud.ts
frontend/src/components/: AdvancedSettings.tsx  BacktestForm.tsx  CloudValidationCard.tsx  FactorWall.tsx  FeedbackButton.tsx  GroupReturnsTable.tsx  Header.tsx  IterationPanel.tsx  MetricCard.tsx  ProgressTracker.tsx  ProtectedRoute.tsx  ReportViewer.tsx  TaskHistory.tsx  (+8 more)
quantgpt/: __main__.py  api_server.py  attribution.py  auth.py  backtest.py  cloud_client.py  composite.py  daily_summary.py  db.py  email_service.py  expression_parser.py  fundamental_data.py  iteration.py  market_data.py  mcp_server.py  models.py  report.py  scheduler_registry.py  weekly_report.py  wq_simulate.py
quantgpt/migrations/: env.py
quantgpt/routes/: admin.py  auth.py  backtest_tasks.py  cloud_upload.py  comparison.py  composite.py  factor_library.py  factor_values.py  sessions.py  strategy_backtest.py  wq_brain.py  wq_brain_batch.py
quantgpt/templates/: factors.json
scripts/: factor_miner.py  fetch_wq_alphas.py  list_alphas.py  send_update_email.py  send_update_email_batch.py
tests/: conftest.py  test_backtest.py  test_expression_parser.py  test_wq_simulate.py
(+15 files in other folders)
